force-app/main/default/objects/Animal__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Meow Parlour</description>
    <formula>IF(ISNULL(Date_of_birth__c),&quot;&quot;, 

   TEXT(YEAR(TODAY()) - YEAR(Date_of_birth__c) - If(MONTH(TODAY()) &lt; MONTH(Date_of_birth__c),1,0)) &amp;
      &quot; year(s), &quot;  &amp;

   TEXT(
      If(MONTH(TODAY()) &gt;= MONTH(Date_of_birth__c),
         MONTH(TODAY()) - MONTH(Date_of_birth__c),
         12 + MONTH(TODAY()) - MONTH(Date_of_birth__c)
      )
   ) &amp;
      &quot; month(s)&quot;

)</formula>
    <inlineHelpText>Age of the animal</inlineHelpText>
    <label>Age</label>
    <type>Text</type>
</CustomField>