force-app/main/default/objects/Animal__c/fields/Date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_birth__c</fullName>
    <description>Meow Parlour - the date the animal was born (if known)</description>
    <inlineHelpText>The date the animal was born (if known)</inlineHelpText>
    <label>Date of birth</label>
    <type>Date</type>
</CustomField>