force-app/main/default/objects/Animal__c/fields/Microchip_Id__c.field-meta.xml
<CustomField>
    <fullName>Microchip_Id__c</fullName>
    <description>Meow Parlour</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique microchip Id for this aniumal</inlineHelpText>
    <label>Microchip Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>