force-app/main/default/objects/Animal__c/fields/Spayed_Nuetered__c.field-meta.xml
<CustomField>
    <fullName>Spayed_Nuetered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Meow Parlour</description>
    <inlineHelpText>Indicates if the animal has been spayed or neutered</inlineHelpText>
    <label>Spayed/Nuetered?</label>
    <type>Checkbox</type>
</CustomField>