force-app/main/default/objects/Animal__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <description>Meow Parlour - what type of species is this animal?</description>
    <inlineHelpText>Select the closest match to the animal&apos;s species</inlineHelpText>
    <label>Species</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Species</valueSetName>
    </valueSet>
</CustomField>